removed reload command and added in the function to the basic reload command