@@ -8,7 +8,7 @@ import java.util.Arrays;
 import java.util.List;
 
 public class Commands {
-    public static List<Command> commands = Arrays.asList(new ServerCommand(), new ReloadCommand());
+    public static List<Command> commands = List.of(new ServerCommand());
     public static void createCommands(CommandDispatcher<ServerCommandSource> serverCommandSourceCommandDispatcher, CommandRegistryAccess commandRegistryAccess, net.minecraft.server.command.CommandManager.RegistrationEnvironment registrationEnvironment) {
         commands.forEach(command -> serverCommandSourceCommandDispatcher.register(command.createCommand()));
     }
